--- a/src/components/products/products.css
+++ b/src/components/products/products.css
@@ -1,6 +1,54 @@
 .products-layout {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-evenly;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+/* Products page */
+#productsLayout {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+#productsLayout a {
+  text-align: center;
+  padding: 3px;
+  margin: 3px;
+}
+#display-image {
+  width: 80%;
+  max-width: 350px;
+  /* max-height: 350px; */
+  border-radius: 10px !important;
+}
+.product-image {
+  border-radius: 10px;
+  transition: border-radius 0.5s;
+  /* aspect-ratio: auto 1/1; */
+  width: 200px;
+}
+
+.product-image:hover {
+  border-radius: 50px;
+}
+.selected-product {
+  border: solid 1px #000;
+}
+.small-images-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin-top: 10px;
+}
+.small-images-container img {
+  max-width: 200px;
+  margin: 3px;
+}
+.alternate-images {
+  grid-column: span 2;
+  margin-top: 30px;
+}
+.alternate-images img {
+  max-width: 100px;
 }
