--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -6,5 +6,15 @@
     bottom: 0;
     width: 100%;
     height: 50px;
-    background-color: grey;
+    background-color: #193048;
+}
+.footer-layout h3 {
+    color: rgb(170, 170, 170);
+}
+
+.my-link {
+    color: #fff;
+}
+.my-link:hover {
+    text-decoration: underline;
 }
