--- a/src/pages/productPage/productPage.css
+++ b/src/pages/productPage/productPage.css
@@ -27,7 +27,6 @@
   color: #d32f2f;
 }
 .product-size {
-  width: 80%;
   margin: auto;
 }
 .product-size button {
@@ -36,7 +35,7 @@
 .quantity-details {
   display: flex;
   justify-content: center;
-  border: solid #878787 0.5px;
+  border: solid #d32f2f 0.5px;
   width: min-content;
   margin: auto;
 }
@@ -45,14 +44,14 @@
 }
 .quantity-details span:nth-child(1) {
   cursor: pointer;
-  border-right: dashed #878787 0.5px;
+  border-right: dashed #d32f2f 0.5px;
 }
 .quantity-details span:nth-child(2) {
   padding: 3px 10px;
 }
 .quantity-details span:nth-child(3) {
   cursor: pointer;
-  border-left: dashed #878787 0.5px;
+  border-left: dashed #d32f2f 0.5px;
 }
 
 .product-detail-desc .buttons {
@@ -111,5 +110,8 @@
   #display-image {
     width: 80%;
     border-radius: 10px !important;
+  }
+  .product-size {
+    width: 80%;
   }
 }
