--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,21 @@ a {
   display: none !important;
 }
 
+.buttons {
+  padding: 10px 20px;
+  margin: auto;
+  margin-top: 20px;
+  font-size: 18px;
+  font-weight: 500;
+  cursor: pointer;
+  width: 200px;
+  transform: scale(1, 1);
+  transition: transform 0.5s ease;
+}
+.buttons:hover {
+  transform: scale(1.1, 1.1);
+}
+
 /* ---- Tablets ----*/
 @media only screen and (max-width: 768px) {
 }
