--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -1,7 +1,19 @@
 .product-card {
-    margin: 10px;
+  margin: 10px;
+  position: relative;
+}
+.product-card .product-price {
+    margin-bottom: 10px;
 }
 
 .card-content {
-    padding-bottom: 0 !important;
+  padding-bottom: 0 !important;
+}
+
+.product-favorite-button {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  background-color: #fff;
+  border-radius: 100%;
 }
