--- a/src/pages/productPage/productPage.css
+++ b/src/pages/productPage/productPage.css
@@ -58,7 +58,7 @@
   display: flex;
   gap: 30px;
 }
-.buttons .add-to-cart {
+.buttons {
   padding: 10px 20px;
   margin: auto;
   margin-top: 20px;
@@ -69,7 +69,7 @@
   transform: scale(1, 1);
   transition: transform 0.5s ease;
 }
-.buttons .add-to-cart:hover {
+.buttons:hover {
   transform: scale(1.1, 1.1);
 }
 
