--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -1,13 +1,21 @@
 .product-card {
   margin: 10px;
   position: relative;
+  max-width: 320px;
+  /* min-width: 300px; */
+  background-color: rgb(241, 241, 241);
+  border-radius: 10px;
+}
+.product-card .product-image {
+  width: 100%;
+  border-radius: 10px;
 }
 .product-card .product-price {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .card-content {
-  padding-bottom: 0 !important;
+  padding: 10px 0;
 }
 
 .product-favorite-button {
