--- a/src/pages/productPage/productPage.css
+++ b/src/pages/productPage/productPage.css
@@ -10,12 +10,61 @@
   color: #d32f2f;
   margin: 0;
 }
+.other-products-layout {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-evenly;
+  padding: 0 10px;
+  max-width: 1500px;
+  margin: auto;
+}
 .product-layout {
   display: grid;
   grid-template-columns: 50% 50%;
   align-items: center;
   justify-items: center;
   margin: 0px auto 10px;
+}
+#display-image {
+  width: 80%;
+  max-width: 350px;
+  border-radius: 10px !important;
+}
+.product-image {
+  border-radius: 10px;
+  transition: border-radius 0.5s;
+  width: 200px;
+}
+.small-images-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin-top: 10px;
+}
+.small-images-container img {
+  max-width: 200px;
+  margin: 3px;
+}
+.small-images-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin-top: 10px;
+}
+.small-images-container img {
+  max-width: 200px;
+  margin: 3px;
+}
+.alternate-images {
+  grid-column: span 2;
+  margin-top: 30px;
+}
+.alternate-images img {
+  max-width: 100px;
+}
+.selected-product {
+  border: solid 1px #000;
 }
 .product-details {
   display: flex;
