--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -9,6 +9,8 @@
 .product-card .product-image {
   width: 100%;
   border-radius: 10px;
+  aspect-ratio: 3/2;
+  object-fit: contain;
 }
 .product-card .product-price {
   margin-bottom: 10px;
