--- a/src/components/products/products.css
+++ b/src/components/products/products.css
@@ -1,3 +1,11 @@
+/* .products-component {
+  margin: 10px 0;
+} */
+.products-title {
+  font-size: 2em;
+  font-weight: bold;
+  color: #d32f2f;
+}
 .products-layout {
   display: flex;
   flex-wrap: wrap;
