Applied deals to products that have deals on, calculating new total with deals applied.

--- a/src/components/favorites/favorites.css
+++ b/src/components/favorites/favorites.css
@@ -33,6 +33,11 @@
 .favorite-product-price {
   font-weight: bold !important;
 }
+.favorite-product-price-old {
+  font-weight: bold !important;
+  color: #999898;
+  text-decoration: line-through #d32f2f;
+}
 .add-favorites {
     text-align: center;
 }
