--- a/src/pages/productPage/productPage.css
+++ b/src/pages/productPage/productPage.css
@@ -75,6 +75,11 @@
   font-weight: bold !important;
   color: #d32f2f;
 }
+.old-price {
+  font-size: 1.5em;
+  color: #999898;
+  text-decoration: line-through #d32f2f;
+}
 .product-size {
   margin: auto;
 }
