--- a/src/components/cart/cart.css
+++ b/src/components/cart/cart.css
@@ -32,12 +32,37 @@
 .cart-product-price {
   font-weight: bold !important;
 }
+.cart-product-price-old {
+  font-weight: bold !important;
+  color: #999898;
+  text-decoration: line-through #d32f2f;
+}
 .cart-size {
   display: flex;
   justify-content: center;
 }
 .add-to-cart {
   text-align: center;
+}
+
+.cart-total{
+  text-align: center;
+  font-weight: bold;
+  color: #d32f2f;
+  font-size: 1.5em;
+}
+.cart-total-saving{
+  text-align: center;
+  /* font-weight: bold; */
+  color: #000;
+  font-size: 1.2em;
+}
+.cart-total-old{
+  text-align: center;
+  font-weight: bold;
+  color: #999898;
+  text-decoration: line-through #d32f2f;
+  font-size: 1.2em;
 }
 #checkout-button {
   display: flex;
