--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -12,8 +12,19 @@
   aspect-ratio: 3/2;
   object-fit: contain;
 }
+.product-card .product-prices {
+  display: flex;
+  justify-content: center;
+}
 .product-card .product-price {
   margin-bottom: 10px;
+}
+
+.product-card .old-price {
+  margin-bottom: 10px;
+  margin-right: 10px;
+  color: #999898;
+  text-decoration: line-through #d32f2f;
 }
 
 .card-content {
